Update export config

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="releases/linux/2D_cube_advanture-v0.1-beta.x86_64"
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/linux/2D_cube_advanture-v0.2-stable.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="releases/windows/2D_cube_advanture-v0.1-beta.exe"
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/windows/2D_cube_advanture-v0.2-stable.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -65,7 +65,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="releases/html/2D_cube_advanture-v0.1-beta.html"
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/html/2D_cube_advanture-v0.2-stable.html"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -121,7 +121,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/android/2D_cube_advanture-v0.1-beta.apk"
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/android/2D_cube_advanture-v0.2-stabil.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -161,8 +161,8 @@ apk_expansion/SALT=""
 apk_expansion/public_key=""
 architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
-architectures/x86=true
-architectures/x86_64=true
+architectures/x86=false
+architectures/x86_64=false
 permissions/custom_permissions=PoolStringArray(  )
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
