Update godot projects

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/linux/2D_cube_advanture-v0.2-stable.x86_64"
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/linux/2D_cube_advanture-v0.3-beta.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -32,7 +32,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/windows/2D_cube_advanture-v0.2-stable.exe"
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/windows/2D_cube_advanture-v0.3-beta.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -65,7 +65,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/html/2D_cube_advanture-v0.2-stable.html"
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/html/2D_cube_advanture-v0.3-beta.html"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -88,7 +88,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/windows/2D_cube_advanture-v0.3-beta_win.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -121,7 +121,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/android/2D_cube_advanture-v0.2-stabil.apk"
+export_path="/home/billal/Documents/Workshop Game/youtube/2D platformer/releases/android/2D_cube_advanture-v0.3-beta.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
